tests/fixtures/invalid/max_no_args.py
# max() requires at least 1 argument
x = max()
